--- a/HR.LeaveManagement.Api/appsettings.json
+++ b/HR.LeaveManagement.Api/appsettings.json
@@ -15,7 +15,7 @@
 
   },
   "JwtSettings": {
-    "Key": "SECRET_JWT_KEY_HERE",
+    "Key": "106de7c4-b20a-47db-a5a1-6faa184a5b46",
     "Issuer": "HRLeavemanagement.Api",
     "Audience": "HRLeavemanagementUser",
     "DurationInMinutes": 15
