fixed leave types handler

--- a/HR.LeaveManagement.Api/appsettings.json
+++ b/HR.LeaveManagement.Api/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "HrDatabaseConnectionString": "Server=TONY\\SQLEXPRESS;Database=clean;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "HrDatabaseConnectionString": "Server=localhost;Database=clean;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    // Server=TONY\\SQLEXPRESS;Database=clean;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False
   },
   "EmailSettings": {
     "ApiKey": "SendGrid-Key",
