--- a/HR.LeaveManagement.Identity/HR.LeaveManagement.Identity.csproj
+++ b/HR.LeaveManagement.Identity/HR.LeaveManagement.Identity.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\HR.LeaveManagement.Application\HR.LeaveManagement.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
